Add more parameters

--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -85,22 +85,21 @@
         "\n",
         "import json\n",
         "\n",
-        "model = \"Pygmalion 6B original (sharded, rehosted)\" #@param [\"Pygmalion 6B original (sharded, rehosted)\", \"Pygmalion 6B original (yields better results)\", \"Pygmalion 6B\", \"Pygmalion 6B experimental\", \"Pygmalion 2.7B\", \"Pygmalion 1.3B\", \"Pygmalion 350M\"] {allow-input: false}\n",
+        "model = \"Pygmalion 6B original (sharded, rehosted)\" #@param [\"Pygmalion 6B original (sharded, rehosted)\", \"Pygmalion 6B (sharded, rehosted)\"] {allow-input: false}\n",
         "\n",
         "models = {\n",
         "    \"Pygmalion 6B original (sharded, rehosted)\": (\"ayylamo\", \"pygmalion-6b\", \"original-sharded\", \"pygmalion-6b_original-sharded\"),\n",
-        "    \"Pygmalion 6B original\": (\"PygmalionAI\", \"pygmalion-6b\", \"b8344bb4eb76a437797ad3b19420a13922aaabe1\", \"pygmalion-6b_b8344bb4eb76a437797ad3b19420a13922aaabe1\"),\n",
-        "    \"Pygmalion 6B\": (\"PygmalionAI\", \"pygmalion-6b\", \"main\", \"pygmalion-6b\"),\n",
-        "    \"Pygmalion 6B experimental\": (\"PygmalionAI\", \"pygmalion-6b\", \"dev\", \"pygmalion-6b_dev\"),\n",
-        "    \"Pygmalion 2.7B\": (\"PygmalionAI\", \"pygmalion-2.7b\", \"main\", \"pygmalion-2.7b\"),\n",
-        "    \"Pygmalion 1.3B\": (\"PygmalionAI\", \"pygmalion-1.3b\", \"main\", \"pygmalion-1.3b\"),\n",
-        "    \"Pygmalion 350M\": (\"PygmalionAI\", \"pygmalion-350m\", \"main\", \"pygmalion-350m\")\n",
+        "    \"Pygmalion 6B (sharded, rehosted)\": (\"ayylamo\", \"pygmalion-6b\", \"sharded\", \"pygmalion-6b_sharded\"),\n",
         "}\n",
         "huggingface_org, huggingface_repo, huggingface_branch, model_name = models[model]\n",
         "\n",
         "# Download the model\n",
         "![[ ! -f models/$model_name/config.json ]] && python download-model.py $huggingface_org/$huggingface_repo --branch $huggingface_branch\n",
         "language_codes = {'Afrikaans': 'af', 'Albanian': 'sq', 'Amharic': 'am', 'Arabic': 'ar', 'Armenian': 'hy', 'Azerbaijani': 'az', 'Basque': 'eu', 'Belarusian': 'be', 'Bengali': 'bn', 'Bosnian': 'bs', 'Bulgarian': 'bg', 'Catalan': 'ca', 'Cebuano': 'ceb', 'Chinese (Simplified)': 'zh-CN', 'Chinese (Traditional)': 'zh-TW', 'Corsican': 'co', 'Croatian': 'hr', 'Czech': 'cs', 'Danish': 'da', 'Dutch': 'nl', 'English': 'en', 'Esperanto': 'eo', 'Estonian': 'et', 'Finnish': 'fi', 'French': 'fr', 'Frisian': 'fy', 'Galician': 'gl', 'Georgian': 'ka', 'German': 'de', 'Greek': 'el', 'Gujarati': 'gu', 'Haitian Creole': 'ht', 'Hausa': 'ha', 'Hawaiian': 'haw', 'Hebrew': 'iw', 'Hindi': 'hi', 'Hmong': 'hmn', 'Hungarian': 'hu', 'Icelandic': 'is', 'Igbo': 'ig', 'Indonesian': 'id', 'Irish': 'ga', 'Italian': 'it', 'Japanese': 'ja', 'Javanese': 'jw', 'Kannada': 'kn', 'Kazakh': 'kk', 'Khmer': 'km', 'Korean': 'ko', 'Kurdish': 'ku', 'Kyrgyz': 'ky', 'Lao': 'lo', 'Latin': 'la', 'Latvian': 'lv', 'Lithuanian': 'lt', 'Luxembourgish': 'lb', 'Macedonian': 'mk', 'Malagasy': 'mg', 'Malay': 'ms', 'Malayalam': 'ml', 'Maltese': 'mt', 'Maori': 'mi', 'Marathi': 'mr', 'Mongolian': 'mn', 'Myanmar (Burmese)': 'my', 'Nepali': 'ne', 'Norwegian': 'no', 'Nyanja (Chichewa)': 'ny', 'Pashto': 'ps', 'Persian': 'fa', 'Polish': 'pl', 'Portuguese (Portugal, Brazil)': 'pt', 'Punjabi': 'pa', 'Romanian': 'ro', 'Russian': 'ru', 'Samoan': 'sm', 'Scots Gaelic': 'gd', 'Serbian': 'sr', 'Sesotho': 'st', 'Shona': 'sn', 'Sindhi': 'sd', 'Sinhala (Sinhalese)': 'si', 'Slovak': 'sk', 'Slovenian': 'sl', 'Somali': 'so', 'Spanish': 'es', 'Sundanese': 'su', 'Swahili': 'sw', 'Swedish': 'sv', 'Tagalog (Filipino)': 'tl', 'Tajik': 'tg', 'Tamil': 'ta', 'Telugu': 'te', 'Thai': 'th', 'Turkish': 'tr', 'Ukrainian': 'uk', 'Urdu': 'ur', 'Uzbek': 'uz', 'Vietnamese': 'vi', 'Welsh': 'cy', 'Xhosa': 'xh', 'Yiddish': 'yi', 'Yoruba': 'yo', 'Zulu': 'zu'}\n",
+        "\n",
+        "# Interface params\n",
+        "text_streaming = True #@param {type:\"boolean\"}\n",
+        "cai_chat = True #@param {type:\"boolean\"}\n",
         "activate_google_translate = False #@param {type:\"boolean\"}\n",
         "your_language = \"French\" # @param ['Afrikaans', 'Albanian', 'Amharic', 'Arabic', 'Armenian', 'Azerbaijani', 'Basque', 'Belarusian', 'Bengali', 'Bosnian', 'Bulgarian', 'Catalan', 'Cebuano', 'Chinese (Simplified)', 'Chinese (Traditional)', 'Corsican', 'Croatian', 'Czech', 'Danish', 'Dutch', 'English', 'Esperanto', 'Estonian', 'Finnish', 'French', 'Frisian', 'Galician', 'Georgian', 'German', 'Greek', 'Gujarati', 'Haitian Creole', 'Hausa', 'Hawaiian', 'Hebrew', 'Hindi', 'Hmong', 'Hungarian', 'Icelandic', 'Igbo', 'Indonesian', 'Irish', 'Italian', 'Japanese', 'Javanese', 'Kannada', 'Kazakh', 'Khmer', 'Korean', 'Kurdish', 'Kyrgyz', 'Lao', 'Latin', 'Latvian', 'Lithuanian', 'Luxembourgish', 'Macedonian', 'Malagasy', 'Malay', 'Malayalam', 'Maltese', 'Maori', 'Marathi', 'Mongolian', 'Myanmar (Burmese)', 'Nepali', 'Norwegian', 'Nyanja (Chichewa)', 'Pashto', 'Persian', 'Polish', 'Portuguese (Portugal, Brazil)', 'Punjabi', 'Romanian', 'Russian', 'Samoan', 'Scots Gaelic', 'Serbian', 'Sesotho', 'Shona', 'Sindhi', 'Sinhala (Sinhalese)', 'Slovak', 'Slovenian', 'Somali', 'Spanish', 'Sundanese', 'Swahili', 'Swedish', 'Tagalog (Filipino)', 'Tajik', 'Tamil', 'Telugu', 'Thai', 'Turkish', 'Ukrainian', 'Urdu', 'Uzbek', 'Vietnamese', 'Welsh', 'Xhosa', 'Yiddish', 'Yoruba', 'Zulu']\n",
         "\n",
@@ -110,10 +109,18 @@
         "with open('settings-colab.json', 'w') as f:\n",
         "  f.write(json.dumps(j, indent=4))\n",
         "\n",
+        "params = []\n",
         "if activate_google_translate:\n",
-        "  !python server.py --share --cai-chat --model $model_name --settings settings-colab.json --extensions google_translate --no-stream\n",
+        "  params.append('--extensions google_translate')\n",
+        "if cai_chat:\n",
+        "  params.append('--cai-chat')\n",
         "else:\n",
-        "  !python server.py --share --cai-chat --model $model_name --settings settings-colab.json\n"
+        "  params.append('--chat')\n",
+        "if not text_streaming:\n",
+        "  params.append('--no-stream')\n",
+        "\n",
+        "cmd = f\"python server.py --share --model {model_name} --settings settings-colab.json {' '.join(params)}\"\n",
+        "!$cmd"
       ],
       "metadata": {
         "id": "hKuocueuXnm5",
