--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -29,7 +29,7 @@
         "* Optionally, you can activate automatic translation using Google Translate to talk to the bot in your own language.\n",
         "* To create your own custom characters, you can use the [Pygmalion JSON character creator](https://oobabooga.github.io/character-creator.html)\n",
         "\n",
-        "Original author: https://github.com/81300"
+        "Based on the original notebook by 81300: \[[link](https://colab.research.google.com/github/81300/AI-Notebooks/blob/main/Colab-TextGen-GPU.ipynb)\]"
       ],
       "metadata": {
         "id": "MFQl6-FjSYtY"
