Disable streaming when google translate is enabled

--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -121,7 +121,7 @@
         "  params.append('--cai-chat')\n",
         "else:\n",
         "  params.append('--chat')\n",
-        "if not text_streaming:\n",
+        "if not text_streaming or activate_google_translate:\n",
         "  params.append('--no-stream')\n",
         "if load_in_8bit:\n",
         "  params.append('--load-in-8bit')\n",
