Rename "soft prompt" to "character bias"

--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -90,7 +90,7 @@
         "text_streaming = True #@param {type:\"boolean\"}\n",
         "cai_chat = True #@param {type:\"boolean\"}\n",
         "load_in_8bit = False #@param {type:\"boolean\"}\n",
-        "activate_softprompt = False #@param {type:\"boolean\"}\n",
+        "activate_character_bias = False #@param {type:\"boolean\"}\n",
         "chat_language = \"English\" # @param ['Afrikaans', 'Albanian', 'Amharic', 'Arabic', 'Armenian', 'Azerbaijani', 'Basque', 'Belarusian', 'Bengali', 'Bosnian', 'Bulgarian', 'Catalan', 'Cebuano', 'Chinese (Simplified)', 'Chinese (Traditional)', 'Corsican', 'Croatian', 'Czech', 'Danish', 'Dutch', 'English', 'Esperanto', 'Estonian', 'Finnish', 'French', 'Frisian', 'Galician', 'Georgian', 'German', 'Greek', 'Gujarati', 'Haitian Creole', 'Hausa', 'Hawaiian', 'Hebrew', 'Hindi', 'Hmong', 'Hungarian', 'Icelandic', 'Igbo', 'Indonesian', 'Irish', 'Italian', 'Japanese', 'Javanese', 'Kannada', 'Kazakh', 'Khmer', 'Korean', 'Kurdish', 'Kyrgyz', 'Lao', 'Latin', 'Latvian', 'Lithuanian', 'Luxembourgish', 'Macedonian', 'Malagasy', 'Malay', 'Malayalam', 'Maltese', 'Maori', 'Marathi', 'Mongolian', 'Myanmar (Burmese)', 'Nepali', 'Norwegian', 'Nyanja (Chichewa)', 'Pashto', 'Persian', 'Polish', 'Portuguese (Portugal, Brazil)', 'Punjabi', 'Romanian', 'Russian', 'Samoan', 'Scots Gaelic', 'Serbian', 'Sesotho', 'Shona', 'Sindhi', 'Sinhala (Sinhalese)', 'Slovak', 'Slovenian', 'Somali', 'Spanish', 'Sundanese', 'Swahili', 'Swedish', 'Tagalog (Filipino)', 'Tajik', 'Tamil', 'Telugu', 'Thai', 'Turkish', 'Ukrainian', 'Urdu', 'Uzbek', 'Vietnamese', 'Welsh', 'Xhosa', 'Yiddish', 'Yoruba', 'Zulu']\n",
         "\n",
         "activate_google_translate = (chat_language != \"English\")\n",
@@ -124,17 +124,17 @@
         "if load_in_8bit:\n",
         "  params.append('--load-in-8bit')\n",
         "\n",
-        "if activate_google_translate or activate_softprompt:\n",
-        "  if not activate_softprompt:\n",
+        "if activate_google_translate or activate_character_bias:\n",
+        "  if not activate_character_bias:\n",
         "    params.append('--extensions google_translate')\n",
         "  elif not activate_google_translate:\n",
-        "    params.append('--extensions softprompt')\n",
+        "    params.append('--extensions character_bias')\n",
         "  else:\n",
-        "    params.append('--extensions softprompt,google_translate')\n",
+        "    params.append('--extensions character_bias,google_translate')\n",
         "    \n",
         "if not text_streaming or activate_google_translate:\n",
         "  params.append('--no-stream')\n",
-        "if activate_softprompt:\n",
+        "if activate_character_bias:\n",
         "  params.append('--verbose')\n",
         "\n",
         "# Starting the web UI\n",
