Add silero TTS option

--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -69,7 +69,8 @@
         "\n",
         "# Install requirements\n",
         "!pip install -r requirements.txt\n",
-        "!pip install -r extensions/google_translate/requirements.txt"
+        "!pip install -r extensions/google_translate/requirements.txt\n",
+        "!pip install -r extensions/silero_tts/requirements.txt"
       ],
       "metadata": {
         "id": "LGQ8BiMuXMDG",
@@ -90,6 +91,7 @@
         "text_streaming = True #@param {type:\"boolean\"}\n",
         "cai_chat = True #@param {type:\"boolean\"}\n",
         "load_in_8bit = False #@param {type:\"boolean\"}\n",
+        "activate_silero_text_to_speech = False #@param {type:\"boolean\"}\n",
         "activate_character_bias = False #@param {type:\"boolean\"}\n",
         "chat_language = \"English\" # @param ['Afrikaans', 'Albanian', 'Amharic', 'Arabic', 'Armenian', 'Azerbaijani', 'Basque', 'Belarusian', 'Bengali', 'Bosnian', 'Bulgarian', 'Catalan', 'Cebuano', 'Chinese (Simplified)', 'Chinese (Traditional)', 'Corsican', 'Croatian', 'Czech', 'Danish', 'Dutch', 'English', 'Esperanto', 'Estonian', 'Finnish', 'French', 'Frisian', 'Galician', 'Georgian', 'German', 'Greek', 'Gujarati', 'Haitian Creole', 'Hausa', 'Hawaiian', 'Hebrew', 'Hindi', 'Hmong', 'Hungarian', 'Icelandic', 'Igbo', 'Indonesian', 'Irish', 'Italian', 'Japanese', 'Javanese', 'Kannada', 'Kazakh', 'Khmer', 'Korean', 'Kurdish', 'Kyrgyz', 'Lao', 'Latin', 'Latvian', 'Lithuanian', 'Luxembourgish', 'Macedonian', 'Malagasy', 'Malay', 'Malayalam', 'Maltese', 'Maori', 'Marathi', 'Mongolian', 'Myanmar (Burmese)', 'Nepali', 'Norwegian', 'Nyanja (Chichewa)', 'Pashto', 'Persian', 'Polish', 'Portuguese (Portugal, Brazil)', 'Punjabi', 'Romanian', 'Russian', 'Samoan', 'Scots Gaelic', 'Serbian', 'Sesotho', 'Shona', 'Sindhi', 'Sinhala (Sinhalese)', 'Slovak', 'Slovenian', 'Somali', 'Spanish', 'Sundanese', 'Swahili', 'Swedish', 'Tagalog (Filipino)', 'Tajik', 'Tamil', 'Telugu', 'Thai', 'Turkish', 'Ukrainian', 'Urdu', 'Uzbek', 'Vietnamese', 'Welsh', 'Xhosa', 'Yiddish', 'Yoruba', 'Zulu']\n",
         "\n",
@@ -115,30 +117,34 @@
         "with open('settings-colab.json', 'w') as f:\n",
         "  f.write(json.dumps(j, indent=4))\n",
         "\n",
-        "params = []\n",
+        "params = set()\n",
         "if cai_chat:\n",
-        "  params.append('--cai-chat')\n",
+        "  params.add('--cai-chat')\n",
         "else:\n",
-        "  params.append('--chat')\n",
+        "  params.add('--chat')\n",
         "\n",
         "if load_in_8bit:\n",
-        "  params.append('--load-in-8bit')\n",
+        "  params.add('--load-in-8bit')\n",
         "\n",
-        "if activate_google_translate or activate_character_bias:\n",
-        "  if not activate_character_bias:\n",
-        "    params.append('--extensions google_translate')\n",
-        "  elif not activate_google_translate:\n",
-        "    params.append('--extensions character_bias')\n",
-        "  else:\n",
-        "    params.append('--extensions character_bias,google_translate')\n",
-        "    \n",
-        "if not text_streaming or activate_google_translate:\n",
-        "  params.append('--no-stream')\n",
+        "active_extensions = []\n",
         "if activate_character_bias:\n",
-        "  params.append('--verbose')\n",
+        "  active_extensions.append('character_bias')\n",
+        "if activate_google_translate:\n",
+        "  active_extensions.append('google_translate')\n",
+        "if activate_silero_text_to_speech:\n",
+        "  active_extensions.append('silero_tts')\n",
+        "\n",
+        "if len(active_extensions) > 0:\n",
+        "  params.add(f'--extensions {\",\".join(active_extensions)}')\n",
+        "\n",
+        "if not text_streaming or activate_google_translate or activate_silero_text_to_speech:\n",
+        "  params.add('--no-stream')\n",
+        "if activate_character_bias:\n",
+        "  params.add('--verbose')\n",
         "\n",
         "# Starting the web UI\n",
         "cmd = f\"python server.py --share --model {model_name} --settings settings-colab.json {' '.join(params)}\"\n",
+        "print(cmd)\n",
         "!$cmd"
       ],
       "metadata": {
