--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -110,12 +110,12 @@
         "huggingface_org, huggingface_repo, huggingface_branch, model_name = models[model]\n",
         "![[ ! -f models/$model_name/config.json ]] && python download-model.py $huggingface_org/$huggingface_repo --branch $huggingface_branch\n",
         "\n",
-        "# Applying the selected language and setting the history size to unlimited\n",
+        "# Applying the selected language and setting the prompt size to 2048\n",
         "# if 8bit mode is selected\n",
         "j = json.loads(open('settings-colab-template.json', 'r').read())\n",
         "j[\"google_translate-language string\"] = language_codes[chat_language]\n",
         "if load_in_8bit:\n",
-        "  j[\"history_size\"] = 0\n",
+        "  j[\"chat_prompt_size\"] = 2048\n",
         "with open('settings-colab.json', 'w') as f:\n",
         "  f.write(json.dumps(j, indent=4))\n",
         "\n",
