--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -89,7 +89,7 @@
         "\n",
         "# Parameters\n",
         "model = \"Pygmalion 6B original (sharded, rehosted)\" #@param [\"Pygmalion 6B original (sharded, rehosted)\", \"Pygmalion 6B main (sharded, rehosted)\", \"Pygmalion 6B dev (sharded, rehosted)\"] {allow-input: false}\n",
-        "text_streaming = True #@param {type:\"boolean\"}\n",
+        "text_streaming = False #@param {type:\"boolean\"}\n",
         "cai_chat = True #@param {type:\"boolean\"}\n",
         "load_in_8bit = False #@param {type:\"boolean\"}\n",
         "activate_silero_text_to_speech = False #@param {type:\"boolean\"}\n",
