--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -61,9 +61,11 @@
         "# Download Github repo\n",
         "%cd /content\n",
         "!git clone https://github.com/oobabooga/text-generation-webui\n",
+        "!mkdir text-generation-webui/logs\n",
         "!ln -s text-generation-webui/models .\n",
         "!ln -s text-generation-webui/characters .\n",
         "!ln -s text-generation-webui/presets .\n",
+        "!ln -s text-generation-webui/logs .\n",
         "%rm -r sample_data\n",
         "%cd text-generation-webui\n",
         "!wget https://oobabooga.github.io/settings-colab.json -O settings-colab-template.json\n",
