Allow saving chat logs to google drive

--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -57,15 +57,33 @@
       "cell_type": "code",
       "source": [
         "#@title 2. Install the requirements\n",
+        "#@markdown Optionally, you can save the chat logs to Google Drive so that they will persist across sessions\n",
         "\n",
-        "# Download Github repo\n",
+        "save_logs_to_google_drive = False #@param {type:\"boolean\"}\n",
+        "\n",
+        "if save_logs_to_google_drive:\n",
+        "  import os\n",
+        "  import shutil\n",
+        "  from google.colab import drive\n",
+        "  drive.mount('/content/drive')\n",
+        "  base_folder = '/content/drive/MyDrive'\n",
+        "\n",
         "%cd /content\n",
         "!git clone https://github.com/oobabooga/text-generation-webui\n",
-        "!mkdir text-generation-webui/logs\n",
-        "!ln -s text-generation-webui/models .\n",
-        "!ln -s text-generation-webui/characters .\n",
-        "!ln -s text-generation-webui/presets .\n",
+        "if save_logs_to_google_drive:\n",
+        "  if not os.path.exists(f\"{base_folder}/oobabooga-data\"):\n",
+        "    os.mkdir(f\"{base_folder}/oobabooga-data\")\n",
+        "  if not os.path.exists(f\"{base_folder}/oobabooga-data/logs\"):\n",
+        "    os.mkdir(f\"{base_folder}/oobabooga-data/logs\")\n",
+        "\n",
+        "  !ln -s \"$base_folder/oobabooga-data/logs\" \"text-generation-webui/logs\"\n",
+        "\n",
+        "else:\n",
+        "  !mkdir text-generation-webui/logs\n",
+        "\n",
         "!ln -s text-generation-webui/logs .\n",
+        "!ln -s text-generation-webui/characters .\n",
+        "!ln -s text-generation-webui/models .\n",
         "%rm -r sample_data\n",
         "%cd text-generation-webui\n",
         "!wget https://oobabooga.github.io/settings-colab.json -O settings-colab-template.json\n",
@@ -90,7 +108,7 @@
         "import json\n",
         "\n",
         "# Parameters\n",
-        "model = \"Pygmalion 6B original (sharded, rehosted)\" #@param [\"Pygmalion 6B original (sharded, rehosted)\", \"Pygmalion 6B main (sharded, rehosted)\", \"Pygmalion 6B dev (sharded, rehosted)\"] {allow-input: false}\n",
+        "model = \"Pygmalion 6B original (sharded, rehosted)\" #@param [\"Pygmalion 6B original (sharded, rehosted)\", \"Pygmalion 6B main (sharded, rehosted)\", \"Pygmalion 6B dev (sharded, rehosted)\", \"Pygmalion 350m (for debugging)\"] {allow-input: false}\n",
         "text_streaming = False #@param {type:\"boolean\"}\n",
         "cai_chat = True #@param {type:\"boolean\"}\n",
         "load_in_8bit = False #@param {type:\"boolean\"}\n",
@@ -106,6 +124,7 @@
         "    \"Pygmalion 6B original (sharded, rehosted)\": (\"ayylamo\", \"pygmalion-6b\", \"original-sharded\", \"pygmalion-6b_original-sharded\"),\n",
         "    \"Pygmalion 6B main (sharded, rehosted)\": (\"ayylamo\", \"pygmalion-6b\", \"sharded\", \"pygmalion-6b_sharded\"),\n",
         "    \"Pygmalion 6B dev (sharded, rehosted)\": (\"ayylamo\", \"pygmalion-6b\", \"dev-sharded\", \"pygmalion-6b_dev-sharded\"),\n",
+        "    \"Pygmalion 350m (for debugging)\": (\"PygmalionAI\", \"pygmalion-350m\", \"main\", \"pygmalion-350m\"),\n",
         "}\n",
         "language_codes = {'Afrikaans': 'af', 'Albanian': 'sq', 'Amharic': 'am', 'Arabic': 'ar', 'Armenian': 'hy', 'Azerbaijani': 'az', 'Basque': 'eu', 'Belarusian': 'be', 'Bengali': 'bn', 'Bosnian': 'bs', 'Bulgarian': 'bg', 'Catalan': 'ca', 'Cebuano': 'ceb', 'Chinese (Simplified)': 'zh-CN', 'Chinese (Traditional)': 'zh-TW', 'Corsican': 'co', 'Croatian': 'hr', 'Czech': 'cs', 'Danish': 'da', 'Dutch': 'nl', 'English': 'en', 'Esperanto': 'eo', 'Estonian': 'et', 'Finnish': 'fi', 'French': 'fr', 'Frisian': 'fy', 'Galician': 'gl', 'Georgian': 'ka', 'German': 'de', 'Greek': 'el', 'Gujarati': 'gu', 'Haitian Creole': 'ht', 'Hausa': 'ha', 'Hawaiian': 'haw', 'Hebrew': 'iw', 'Hindi': 'hi', 'Hmong': 'hmn', 'Hungarian': 'hu', 'Icelandic': 'is', 'Igbo': 'ig', 'Indonesian': 'id', 'Irish': 'ga', 'Italian': 'it', 'Japanese': 'ja', 'Javanese': 'jw', 'Kannada': 'kn', 'Kazakh': 'kk', 'Khmer': 'km', 'Korean': 'ko', 'Kurdish': 'ku', 'Kyrgyz': 'ky', 'Lao': 'lo', 'Latin': 'la', 'Latvian': 'lv', 'Lithuanian': 'lt', 'Luxembourgish': 'lb', 'Macedonian': 'mk', 'Malagasy': 'mg', 'Malay': 'ms', 'Malayalam': 'ml', 'Maltese': 'mt', 'Maori': 'mi', 'Marathi': 'mr', 'Mongolian': 'mn', 'Myanmar (Burmese)': 'my', 'Nepali': 'ne', 'Norwegian': 'no', 'Nyanja (Chichewa)': 'ny', 'Pashto': 'ps', 'Persian': 'fa', 'Polish': 'pl', 'Portuguese (Portugal, Brazil)': 'pt', 'Punjabi': 'pa', 'Romanian': 'ro', 'Russian': 'ru', 'Samoan': 'sm', 'Scots Gaelic': 'gd', 'Serbian': 'sr', 'Sesotho': 'st', 'Shona': 'sn', 'Sindhi': 'sd', 'Sinhala (Sinhalese)': 'si', 'Slovak': 'sk', 'Slovenian': 'sl', 'Somali': 'so', 'Spanish': 'es', 'Sundanese': 'su', 'Swahili': 'sw', 'Swedish': 'sv', 'Tagalog (Filipino)': 'tl', 'Tajik': 'tg', 'Tamil': 'ta', 'Telugu': 'te', 'Thai': 'th', 'Turkish': 'tr', 'Ukrainian': 'uk', 'Urdu': 'ur', 'Uzbek': 'uz', 'Vietnamese': 'vi', 'Welsh': 'cy', 'Xhosa': 'xh', 'Yiddish': 'yi', 'Yoruba': 'yo', 'Zulu': 'zu'}\n",
         "\n",
