--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -24,13 +24,22 @@
         "\n",
         "This notebook is an *unofficial* method to run the [PygmalionAI LLMs](https://huggingface.co/PygmalionAI) (NSFW) using **oobabooga**'s [text-generation-webui](https://github.com/oobabooga/text-generation-webui) project in chat mode.\n",
         "\n",
-        "Run all the cells and a public gradio URL will appear at the bottom in around 5 minutes. \n",
+        "Run all the cells and a public gradio URL will appear at the bottom in around 5 minutes.\n",
         "\n",
-        "* Optionally, you can activate automatic translation using Google Translate to talk to the bot in your own language.\n",
-        "* To create your own custom characters, you can use the [Pygmalion JSON character creator](https://oobabooga.github.io/character-creator.html)\n",
-        "* A total of 118 voices can be used in the TTS extension (`en_0` to `en_117`). Here you can find samples: [Silero samples](https://oobabooga.github.io/silero-samples/)  \n",
+        "## Parameters\n",
         "\n",
-        "Based on the original notebook by 81300: [link](https://colab.research.google.com/github/81300/AI-Notebooks/blob/main/Colab-TextGen-GPU.ipynb)\n"
+        "* **save_logs_to_google_drive**: saves your chat logs to Google Drive automatically, so that they will persist across sessions.\n",
+        "* **text_streaming**: streams the text output in real time instead of waiting for the full response to be completed.\n",
+        "* **cai_chat**: makes the interface look like Character.AI. Otherwise, it looks like a standard WhatsApp-like chat.\n",
+        "* **load_in_8bit**: loads the model with 8-bit precision, reducing the GPU memory usage by half. This allows you to use the full 2048 prompt length without running out of memory, at a small accuracy and speed cost.\n",
+        "* **activate_silero_text_to_speech**: responses will be audios instead of text. There are 118 voices available (`en_0` to `en_117`), which can be set in the \"Extensions\" tab of the interface. You can find samples here: [Silero samples](https://oobabooga.github.io/silero-samples/).\n",
+        "* **activate_sending_pictures**: adds a menu for sending pictures to the bot, which are automatically captioned using BLIP.\n",
+        "* **activate_character_bias**: an extension that adds an user-defined, hidden string at the beginning of the bot's reply with the goal of biasing the rest of the response.\n",
+        "* **chat_language**: if different than English, activates automatic translation using Google Translate, allowing you to communicate with the bot in a different language.\n",
+        "\n",
+        "## Credits\n",
+        "\n",
+        "Based on the [original notebook by 81300](https://colab.research.google.com/github/81300/AI-Notebooks/blob/main/Colab-TextGen-GPU.ipynb).\n"
       ],
       "metadata": {
         "id": "MFQl6-FjSYtY"
