--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -37,6 +37,13 @@
         "* **activate_character_bias**: an extension that adds an user-defined, hidden string at the beginning of the bot's reply with the goal of biasing the rest of the response.\n",
         "* **chat_language**: if different than English, activates automatic translation using Google Translate, allowing you to communicate with the bot in a different language.\n",
         "\n",
+        "## Characters\n",
+        "\n",
+        "You can use the following websites to create characters compatible with this web UI:\n",
+        "\n",
+        "* [Pygmalion JSON character creator](https://oobabooga.github.io/character-creator.html)\n",
+        "* [AI Character Editor](https://zoltanai.github.io/character-editor/)\n",
+        "\n",
         "## Credits\n",
         "\n",
         "Based on the [original notebook by 81300](https://colab.research.google.com/github/81300/AI-Notebooks/blob/main/Colab-TextGen-GPU.ipynb).\n"
