--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -73,7 +73,7 @@
       "cell_type": "code",
       "source": [
         "#@title 2. Install the requirements\n",
-        "#@markdown Optionally, you can save the chat logs to Google Drive so that they will persist across sessions\n",
+        "#@markdown Optionally, you can save the chat logs to Google Drive so that they will persist across sessions.\n",
         "\n",
         "save_logs_to_google_drive = False #@param {type:\"boolean\"}\n",
         "\n",
