--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -75,6 +75,8 @@
         "#@title 2. Install the requirements\n",
         "#@markdown Optionally, you can save the chat logs to Google Drive so that they will persist across sessions.\n",
         "\n",
+        "#@markdown * The softprompts will be saved as well. \n",
+        "\n",
         "save_logs_to_google_drive = False #@param {type:\"boolean\"}\n",
         "\n",
         "if save_logs_to_google_drive:\n",
@@ -91,8 +93,12 @@
         "    os.mkdir(f\"{base_folder}/oobabooga-data\")\n",
         "  if not os.path.exists(f\"{base_folder}/oobabooga-data/logs\"):\n",
         "    os.mkdir(f\"{base_folder}/oobabooga-data/logs\")\n",
+        "  if not os.path.exists(f\"{base_folder}/oobabooga-data/softprompts\"):\n",
+        "    os.mkdir(f\"{base_folder}/oobabooga-data/softprompts\")\n",
+        "  !rm -r \"text-generation-webui/softprompts\"\n",
         "\n",
         "  !ln -s \"$base_folder/oobabooga-data/logs\" \"text-generation-webui/logs\"\n",
+        "  !ln -s \"$base_folder/oobabooga-data/softprompts\" \"text-generation-webui/softprompts\"\n",
         "\n",
         "else:\n",
         "  !mkdir text-generation-webui/logs\n",
