--- a/Colab-TextGen-GPU.ipynb
+++ b/Colab-TextGen-GPU.ipynb
@@ -28,7 +28,7 @@
         "\n",
         "## Parameters\n",
         "\n",
-        "* **save_logs_to_google_drive**: saves your chat logs to Google Drive automatically, so that they will persist across sessions.\n",
+        "* **save_logs_to_google_drive**: saves your chat logs, characters, and softprompts to Google Drive automatically, so that they will persist across sessions.\n",
         "* **text_streaming**: streams the text output in real time instead of waiting for the full response to be completed.\n",
         "* **cai_chat**: makes the interface look like Character.AI. Otherwise, it looks like a standard WhatsApp-like chat.\n",
         "* **load_in_8bit**: loads the model with 8-bit precision, reducing the GPU memory usage by half. This allows you to use the full 2048 prompt length without running out of memory, at a small accuracy and speed cost.\n",
@@ -75,7 +75,7 @@
         "#@title 2. Install the requirements\n",
         "#@markdown Optionally, you can save the chat logs to Google Drive so that they will persist across sessions.\n",
         "\n",
-        "#@markdown * The softprompts will be saved as well. \n",
+        "#@markdown * The characters and softprompts will be saved as well. \n",
         "\n",
         "save_logs_to_google_drive = False #@param {type:\"boolean\"}\n",
         "\n",
@@ -95,10 +95,15 @@
         "    os.mkdir(f\"{base_folder}/oobabooga-data/logs\")\n",
         "  if not os.path.exists(f\"{base_folder}/oobabooga-data/softprompts\"):\n",
         "    os.mkdir(f\"{base_folder}/oobabooga-data/softprompts\")\n",
+        "  if not os.path.exists(f\"{base_folder}/oobabooga-data/characters\"):\n",
+        "    shutil.move(\"text-generation-webui/characters\", f\"{base_folder}/oobabooga-data/characters\")\n",
+        "  else:\n",
+        "    !rm -r \"text-generation-webui/characters\"\n",
+        "    \n",
         "  !rm -r \"text-generation-webui/softprompts\"\n",
-        "\n",
         "  !ln -s \"$base_folder/oobabooga-data/logs\" \"text-generation-webui/logs\"\n",
         "  !ln -s \"$base_folder/oobabooga-data/softprompts\" \"text-generation-webui/softprompts\"\n",
+        "  !ln -s \"$base_folder/oobabooga-data/characters\" \"text-generation-webui/characters\"\n",
         "\n",
         "else:\n",
         "  !mkdir text-generation-webui/logs\n",
